--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^5.12.9",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "path": "^0.12.7"
   }
 }
