--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "description": "cost-app hit project",
     "main": "index.js",
     "scripts": {
-      "start": "npm start --prefix backend",
-      "client": "cd frontend && npm start",
-      "dev": "cd backend && npm run start && cd frontend && npm start",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm install --prefix backend && npm run build --prefix frontend ",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "npm start --prefix backend",
+        "client": "cd frontend && npm start",
+        "dev": "cd backend && npm run start && cd frontend && npm start",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm install --prefix backend && npm run build --prefix frontend ",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "yosef shaul, shilo sharabi",
-    "license": "ISC"
-  }
+    "license": "ISC",
+    "devDependencies": {
+        "tailwindcss": "^3.1.8"
+    }
+}
