--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "license": "ISC",
     "devDependencies": {
         "tailwindcss": "^3.1.8"
+    },
+    "dependencies": {
+        "next": "^12.3.0"
     }
 }
